Add Docker support, configuration models, and update requirements for web crawler

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -7,6 +7,7 @@ services:
   app:
     build: .
     container_name: crawler-index
+    command: /bin/sh -c "cd src/crawl_ai && python3 main.py" # Needs further testing/setup
     volumes:
       - .:/app  # Mount your project directory to the container
 
