Enhance Docker configuration and add SQLite volume for persistent storage; update requirements and improve crawling progress tracking with tqdm

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -10,6 +10,9 @@ services:
     command: /bin/sh -c "cd src/crawl_ai && python3 main.py" # Needs further testing/setup
     volumes:
       - .:/app  # Mount your project directory to the container
+      - sqlite-data:/root/.crawl4ai
 
     networks:
       - net
+volumes:
+  sqlite-data:
