Add main application logic for PDF processing and embedding; update launch configuration and requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ crawl4ai
 milvus_cli                               
 pydantic-settings
 tqdm
+fastapi
+python-multipart # for file upload
+uvicorn
+PyPDF2
