--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
   
 
         {
@@ -23,6 +24,17 @@
             "type": "debugpy",
             "request": "launch",
             "program": "/app/src/crawl_ai/re_crawl.py",
+            "cwd": "${workspaceFolder}",
+            "console": "integratedTerminal",
+            "justMyCode":false,
+
+        },
+
+        {
+            "name": "test-crawl-ai",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "/app/test.py",
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
             "justMyCode":false,
