--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,3 @@
-
-networks:
-  net:
-    driver: bridge
-
 services:
   app:
     build: .
@@ -12,6 +7,10 @@ services:
       - sqlite-data:/root/.crawl4ai
 
     networks:
-      - net
+      - botnet
 volumes:
   sqlite-data:
+
+networks:
+  botnet:
+    external: true
