--- a/requirements.prod.txt
+++ b/requirements.prod.txt
@@ -1,6 +1,6 @@
-langchain=== 0.2.6
-langchain-community===0.2.6
-fastembed===0.2.1
+langchain
+langchain-community
+fastembed
 langchain-milvus
 crawl4ai
 pydantic-settings
