Refactor project structure and enhance functionality: - Update launch configuration to set PYTHONPATH. - Modify requirements.txt to correct package names and versions. - Add debug flag to CrawlSettings model. - Refactor base crawling logic to improve URL handling and remove unnecessary database connections. - Implement custom caching and database initialization methods in custom_crawl.py. - Streamline document processing and embedding logic in process_files.py and process_web_content.py. - Update web schema to reflect new metadata structure.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
             "request": "launch",
             "program": "/app/src/crawl_ai/first_crawl.py",
             "cwd": "${workspaceFolder}",
+            "env": {"PYTHONPATH": "/app"},
             "console": "integratedTerminal",
             "justMyCode":false,
 
