Add production Dockerfile and update docker-compose for app configuration; expose port 8000 and set environment variables

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -46,8 +46,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # Install dependencies
 RUN pip install --upgrade pip
-COPY ./requirements.txt .
-RUN pip install -r requirements.txt
+COPY ./requirements.prod.txt .
+RUN pip install -r requirements.prod.txt
 RUN  playwright install 
 RUN crawl4ai-setup
 
