--- a/requirements.prod.txt
+++ b/requirements.prod.txt
@@ -2,6 +2,12 @@ langchain
 langchain-community
 fastembed
 langchain-milvus
-crawl4ai
+crawl4AI===0.6.3                             
 pydantic-settings
 tqdm
+fastapi
+python-multipart # for file upload
+uvicorn
+PyPDF2
+pypdf
+langchain-ollama
