Add FastAPI launch configuration and update document processing to handle missing metadata fields

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,19 @@
 
         },
 
+
+          {
+            "name": "fast_api",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "/app/main.py",
+            "env": {"PYTHONPATH": "/app"},
+            "cwd": "${workspaceFolder}",
+            "console": "integratedTerminal",
+            "justMyCode":false,
+
+        },
+
         {
             "name": "test-crawl-ai",
             "type": "debugpy",
