--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,9 @@
 MILVUS_URL="http://milvus-example.de"
 
 RAGFLOW_API_KEY = "your_ragflow_api_key_here"
+
+POSTGRES_HOST = "postgres"
+POSTGRES_PORT = "5432"
+POSTGRES_DB = "crawl_ai"
+POSTGRES_USER = ""
+POSTGRES_PASSWORD = ""
