--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: crawler-index
     environment:
       # PostgreSQL connection string
-      DATABASE_URL: postgres://crawler:crawler_password@postgres:5432/crawler_db
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/POSTGRES_DB
     networks:
       - botnet
     depends_on:
@@ -15,17 +15,18 @@ services:
     image: postgres:16-alpine
     container_name: crawler-postgres
     environment:
-      POSTGRES_USER: crawler
-      POSTGRES_PASSWORD: crawler_password
-      POSTGRES_DB: crawler_db
+      POSTGRES_USER: ${POSTGRES_USER:-crawler}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-crawler_password}
+      POSTGRES_DB: ${POSTGRES_DB:-crawler_db}
       PGDATA: /var/lib/postgresql/data/pgdata
+  
     networks:
       - botnet
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./src/db/postgres/init-db:/docker-entrypoint-initdb.d 
     ports:
-      - "5433:5432"  # Exposed to host on 5433 to avoid conflict with Firecrawl's 5432
+      - "${POSTGRES_PORT:-5433}:5432"  # Exposed to host on 5433 to avoid conflict with Firecrawl's 5432
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U crawler -d crawler_db"]
       interval: 10s
