Implement re-crawling functionality: add ReCrawlSettings model, create recrawl_embed endpoint, and enhance ReCrawlApp for content updates

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,7 @@
             "request": "launch",
             "program": "/app/src/crawl_ai/re_crawl.py",
             "cwd": "${workspaceFolder}",
+            "env": {"PYTHONPATH": "/app"},
             "console": "integratedTerminal",
             "justMyCode":false,
 
