create docker deployment for production. Add crawl4ai to the docker compose

--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,4 @@
-MILVUS_URL="http://milvus-example.de"
+MILVUS_URL = "http://milvus-example.de"
 
 RAGFLOW_API_KEY = "your_ragflow_api_key_here"
 
@@ -7,3 +7,7 @@ POSTGRES_PORT = "5432"
 POSTGRES_DB = "crawl_ai"
 POSTGRES_USER = ""
 POSTGRES_PASSWORD = ""
+CRAWL_API_URL = ""  # endpoint to crawl4ai
+
+# uncomment if service is running on docker compose
+# CRAWL_API_URL = "http://crawl4ai"
