--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,9 @@
         "editor.formatOnSave": true
 
       },
-      "isort.args":["--profile", "black"],
+    "isort.args": [
+        "--profile",
+        "black"
+    ],
+    "chat.disableAIFeatures": true,
 }
