--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       # PostgreSQL connection string
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
     networks:
-      - botnet
+      - net
     depends_on:
       postgres:
         condition: service_healthy
@@ -21,7 +21,7 @@ services:
       PGDATA: /var/lib/postgresql/data/pgdata
   
     networks:
-      - botnet
+      - net
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./src/db/postgres/init-db:/docker-entrypoint-initdb.d 
@@ -33,10 +33,19 @@ services:
       timeout: 5s
       retries: 5
     restart: unless-stopped
+  
+  crawl4ai:
+    image: unclecode/crawl4ai:latest
+    container_name: crawl4ai
+    networks:
+      - net
+    ports:
+      - 11235:11235
+    restart: always
 
 volumes:
   postgres-data:
 
 networks:
-  botnet:
+  net:
     driver: bridge
