add pgadmin to docker compse prod

--- a/.env_example
+++ b/.env_example
@@ -9,5 +9,9 @@ POSTGRES_USER = ""
 POSTGRES_PASSWORD = ""
 CRAWL_API_URL = ""  # endpoint to crawl4ai
 
+# if pgadmin in docker compose
+PGADMIN_DEFAULT_EMAIL = ""
+PGADMIN_DEFAULT_PASSWORD = ""
+
 # uncomment if service is running on docker compose
 # CRAWL_API_URL = "http://crawl4ai"
