--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -33,13 +33,25 @@ services:
       - postgres-data:/var/lib/postgresql/data
       - ./src/db/postgres/init-db:/docker-entrypoint-initdb.d 
     ports:
-      - "${POSTGRES_PORT:-5433}:5432"  # Exposed to host on 5433 to avoid conflict with Firecrawl's 5432
+      - "${POSTGRES_PORT:-5432}:5432"  # Exposed to host on 5433 to avoid conflict with Firecrawl's 5432
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U crawler -d crawler_db"]
       interval: 10s
       timeout: 5s
       retries: 5
     restart: always
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    ports:
+      - 5050:80
+    environment:
+      # Required by pgAdmin
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    networks:
+      - net
+    restart: always
+    
   
   crawl4ai:
     image: unclecode/crawl4ai:latest
